// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js",
    6127,
    Object {
      "chunkhash": "2cdb78a69ceab38200ad",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.2cdb78a69ceab38200ad.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): errors 1`] = `Array []`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): warnings 1`] = `Array []`;

exports[`"compressionOptions" option matches snapshot without values: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js",
    6127,
    Object {
      "chunkhash": "2cdb78a69ceab38200ad",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.2cdb78a69ceab38200ad.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot without values: errors 1`] = `Array []`;

exports[`"compressionOptions" option matches snapshot without values: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js",
    6127,
    Object {
      "chunkhash": "2cdb78a69ceab38200ad",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.2cdb78a69ceab38200ad.js.br",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js.br",
    1407,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1407,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "deflateed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    381,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 381,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js",
    6127,
    Object {
      "chunkhash": "2cdb78a69ceab38200ad",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "deflateed": "main.2cdb78a69ceab38200ad.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js.gz",
    1648,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1648,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "deflateRawed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    375,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 375,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js",
    6127,
    Object {
      "chunkhash": "2cdb78a69ceab38200ad",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "deflateRawed": "main.2cdb78a69ceab38200ad.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js.gz",
    1642,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1642,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js",
    6127,
    Object {
      "chunkhash": "2cdb78a69ceab38200ad",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.2cdb78a69ceab38200ad.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: warnings 1`] = `Array []`;
